# web-scraper

./: pyproject.toml  web-scraper.ipynb
